package sparks.dataflow.protocols.processmodel

case class ExecutionResult(activities: Map[Int, ActivityStatistic])